--- a/webpage/index.html
+++ b/webpage/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Campus</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
+    <body>
+        <div class="container">
+            <div class="logo">
+                <!-- Reemplaza 'logo.png' con la ruta a tu logo -->
+                <img src="images/logocampus.png" alt="Logo de Campus">
+            </div>
+            <div class="description">
+                <p>Encuentra al mejor profesor</p>
+            </div>
+            <div class="search-bar">
+                <input type="text" placeholder="Busca un profesor...">
+                <button type="submit">Buscar</button>
+            </div>
+        </div>
+
+        <footer>
+            <div class="footer-container">
+                <p>Campus &copy; 2024 </p>
+                <nav class="footer-nav">
+                    <a href="#contacto">Contacto</a>
+                    <a href="#acerca">Acerca de</a>
+                    <a href="#terminos">Términos y condiciones</a>
+                </nav>
+            </div>
+        </footer>
+        
+    
+</body>
+</html>
